<resources>
    <!-- Firebase strings -->
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3910814368891137/6295286789</string>
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="app_name">Sudoku</string>
    <string name="sudoku" translatable="false">Sudoku</string>
    <string name="help_fab_label">Help</string>
    <string name="play">Play</string>
    <string name="solver">Solver</string>
    <string name="restart_label">Restart</string>
    <string name="tooltip_fab_label">Choose an action</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings" translatable="false">Sudoku</string>
    <string name="validate_label">Validate</string>
    <string name="solve_label">Solve</string>
    <string name="home_fab_label">Main menu</string>
    <string name="new_game_fab_label">Start a new game</string>
    <string name="confirm_exit_title">Exit game</string>
    <string name="confirm_exit_message">Are you sure you want to exit this game ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_exit_game_message">Are you sure you want to exit ? Your progress is not going to be saved.</string>
    <string name="confirm_exit_game_title">Exit game</string>
    <string name="comming_soon">Coming soon</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <!-- Help text -->
    <string name="how_to_play" translatable="false">Comment jouer ?</string>
    <string name="how_to_play_text" translatable="false">
        <![CDATA[
            Le but du jeu du Sudoku est de remplir toutes les cases avec un nombre entre 1 et 9.
            Il ne doit pas y avoir plusieurs fois le même nombre sur une même ligne, une même colonne ou un même carré.
            <br>
            <br>
            Pour entrer un nombre dans une case, vous devez&nbsp;:<br>
            <b>1.</b> Sélectionner la case du Sudoku que vous voulez remplir en cliquant dessus. Les cases que vous pouvez modifier possèdent un fond blanc.<br>
            <img src="sudoku_example"><br>
            <b>2.</b> Cliquer sur l\'un des nombres de 1 à 9 en dessous pour mettre la valeur désirée.<br>
            <img src="sudoku_bottom_button"><br>
            <br>
            Si vous voulez vider le Sudoku, cliquez sur le boutton \"$restart_label@\". Une fois que vous pensez avoir terminé, cliquez sur le boutton \"$validate_label@\".
        ]]>
    </string>
    <string name="play_mode" translatable="false">Quels sont les modes de jeux ?</string>
    <string name="play_mode_text" translatable="false">
        <![CDATA[
            Il n\'y a qu\'un seul mode de jeu pour le moment. Il s\'agit du mode $play@. Ce mode vous permet de jouer avec les règles de base du Sudoku. Il possède 3 niveaux de difficultés.
        ]]>
    </string>
    <string name="sign_to_play_game">Sign to Google Play Game</string>
    <string name="achievement">Achievement</string>
    <string name="title_activity_solve">Sudoku solver</string>

</resources>
