<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.HelpActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/hep_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/help_fab_label"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/how_to_play"
                style="@style/Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play" />

        <com.tboul.sudoku.views.components.HtmlTextView
                android:id="@+id/how_to_play_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_play_text" />

    </LinearLayout>


</ScrollView>