<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <TextView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="50dp">
    </TextView>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <FrameLayout
                android:id="@+id/sudoku"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">

        </FrameLayout>

        <com.tboul.sudoku.views.components.FloatingActionMenuPlay
                android:id="@+id/fab_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                fab:fab_shadowColor="#66000000"
                fab:fab_showShadow="true"
                fab:menu_colorNormal="@color/colorPrimary"
                fab:menu_colorPressed="@color/colorPrimaryDark"
                fab:menu_labels_ellipsize="end"
                fab:menu_labels_maxLines="-1"
                fab:menu_labels_position="left"
                fab:menu_labels_showShadow="true"
                fab:menu_labels_singleLine="true"
                fab:menu_openDirection="up">

            <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_help"
                    fab:fab_colorNormal="@color/colorPrimary"
                    fab:fab_colorPressed="@color/colorPrimaryDark"
                    fab:fab_label="@string/help_fab_label"
                    fab:fab_size="mini" />

<!--            <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_settings"
                    fab:fab_colorNormal="@color/colorPrimary"
                    fab:fab_colorPressed="@color/colorPrimaryDark"
                    fab:fab_label="@string/settings"
                    fab:fab_size="mini" />-->

            <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_new_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_reset"
                    fab:fab_colorNormal="@color/colorPrimary"
                    fab:fab_colorPressed="@color/colorPrimaryDark"
                    fab:fab_label="@string/new_game_fab_label"
                    fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_home"
                    fab:fab_colorNormal="@color/colorPrimary"
                    fab:fab_colorPressed="@color/colorPrimaryDark"
                    fab:fab_label="@string/home_fab_label"
                    fab:fab_size="mini" />

        </com.tboul.sudoku.views.components.FloatingActionMenuPlay>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button_validate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight=".50"
                    android:background="@drawable/rounded_button"
                    android:text="@string/validate_label"
                    style="?android:attr/borderlessButtonStyle"/>

            <Button
                    android:id="@+id/button_restart"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight=".50"
                    android:background="@drawable/rounded_button"
                    android:text="@string/restart_label"
                    style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>